--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     <div class="absolute inset-0 rounded-full bg-neon-blue opacity-20 blur-xl animate-pulse"></div>
                     <div class="absolute inset-0 rounded-full border-4 border-neon-blue animate-spin-slow" style="animation-duration: 20s;"></div>
                     <div class="absolute inset-2 rounded-full border-2 border-neon-blue animate-spin-slow-reverse" style="animation-duration: 25s;"></div>
-                    <img src="WhatsApp Image 2025-07-27 at 4.41.41 PM.jpeg" alt="S. Kritheeck" class="relative w-full h-full rounded-full object-cover neon-glow floating">
+                    <img src="portfolio_image.jpeg" alt="S. Kritheeck" class="relative w-full h-full rounded-full object-cover neon-glow floating">
                 </div>
             </div>
         </div>
